# CIRISAgent

./: .coveragerc  .coveragerc-ciris-manager  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture.toml  1  :memory:  ADAPTER_MYPY_FIXES.md  AGENTS.md  AGGRESSIVE_SIMPLIFICATION_PLAN.md  ALL_STARTUP_FIXES_COMPLETE.md  API.md  API_IMPLEMENTATION_PLAN.md  API_REFACTOR_PLAN.md  API_SPECIFICATION.md  API_TRINITY_DESIGN.md  API_UPDATE_PLAN.md  ARCHITECTURE.md  ATTRIBUTE_ERRORS_FIXED_SUMMARY.md  AUDIT_SERVICE_FIX_SUMMARY.md  BASESERVICE_MIGRATION_COMPLETE.md  BASE_SERVICE_PROPOSAL.md  BETA_STATUS_REPORT.md  BOOK_VI_COMPLIANCE_README.md  BUILD_INFO.txt  BUSSED_VS_UNBUSSED_SERVICES.md  BUS_PROTOCOL_COMPLIANCE_REPORT.md  CIRISNode.md  CIRIS_AI_ASSISTANT_GUIDE.txt  CIRIS_COMPREHENSIVE_GUIDE.md  CIRIS_MOCK_LLM.md  CIRIS_RUNTIME_TEST_FIX_SUMMARY.md  CIS.md  CI_SETUP_SUMMARY.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE_DEVELOPER_NOTES.md  CLEANUP_TASKS.md  (+412 more)
.githooks/: pre-commit-wrapper  smart-commit-hook.py
CIRISGUI/: README.md  README_UPDATED.md  package-lock.json  package.json
CIRISGUI/apps/ciris-api/: main.py  pyproject.toml  uvicorn_config.py
CIRISVoice/: APIMODE.md  ASYNC_RESPONSE_HANDLING.md  HA_YELLOW_DEPLOYMENT.md  README.md  README_SDK.md  SDK_MIGRATION.md  SIMPLE_INTEGRATION.md  VOICE_PE_QUICKSTART.md  WYOMING_CIRIS_INTEGRATION.md  check_mdns.py  config.example.yaml  config.yaml.example  debug_connection.py  ha_yellow_setup.sh  requirements.txt  setup.py  setup.sh  test_exact_match.py  test_exact_mimic.py  test_ha_compat.py  test_minimal_wyoming.py  (+7 more)
(+2151 files in other folders)
